优化主机自动应用接口

--- a/resources/configures/webserver.conf
+++ b/resources/configures/webserver.conf
@@ -3,21 +3,21 @@ version=v3
 
 [session]
 name=cc3
-skip=0
+skip=1
 defaultlanguage=zh-cn
 host=127.0.0.1
 port=6379
-secret=redisauth
+secret=cc
 multiple_owner=0
 
 [site]
-domain_url=http://bk.tencent.com/
-bk_login_url=http://bk.tencent.com/login/?app_id=%s&c_url=%s
+domain_url=http://127.0.0.1:8083
+bk_login_url=http://127.0.0.1/login/?app_id=%s&c_url=%s
 app_code=cc
 check_url=http://bk.tencent.com/login/accounts/get_user/?bk_token=
 bk_account_url=http://bk.tencent.com/login/accounts/get_all_user/?bk_token=%s
 resources_path=/tmp/
-html_root=/data/cmdb/cmdb_webserver/static
+html_root=D:\\Project\\src\\configcenter\\scripts\\web
 authscheme=internal
 # 全文检索功能开关(off，on), 用于给前端提供是否开启全文检索功能界面展示
 full_text_search=off
